--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <h2>Status da Encomenda</h2>
       <p>Confira se sua Encomenda está Retida agora. Clique no botão abaixo para ser direcionado à página de consultas.</p>
 
-      <a href="https://tranquil-travesseiro-769109.netlify.app/rastreio/index.htm" class="go-btn">Consultar Agora</a>
+      <a href="https://tranquil-travesseiro-769109.netlify.app/rastreio" class="go-btn">Consultar Agora</a>
     </div>
   </section>
 
